# easy-mql

./: .gitignore  LICENSE  README.md  makefile  setup.cfg
.github/workflows/: autoblack.yml  autopytest.yml
docs/: README.md  _sidebar.md  basics.md  datatypes.md  examples.md  functions.md  howtouse.md  index.html  operators.md  stages.md  usagevideo.html
easymql/: __init__.py  actions.py  basics.py  core.py  exc.py  identifiers.py  keywords.py  meta.py  pipeline.py  proxies.py  stages.py  utils.py
easymql/datatypes/: __init__.py  composite.py  primary.py
easymql/expressions/: __init__.py  accumulators.py  arithmetic.py  array.py  boolean.py  comparison.py  conditional.py  datasize.py  date.py  miscellaneous.py  object.py  others.py  set.py  strings.py  systemvariables.py  trigonometry.py  type.py
easymql/stages/: groupacc.py  parts.py  stages.py
scripts/: docgen.py
src/easymql/: basics.py  core.py  identifiers.py  keywords.py
src/easymql/expressions/: arithmetic.py  array.py  comparison.py  conditional.py  date.py  (+2 more)
tests/: test_easy_mql.py  test_groupacc.py  test_pipeline.py  test_stages.py  test_utils.py
tests/datatypes/: test_composite.py  test_primary.py
tests/expressions/: test_accumulators.py  test_arithmetic.py  test_array.py  test_boolean.py  test_comparison.py  test_conditional.py  test_datasize.py  test_date.py  test_expression.py  test_miscellaneous.py  test_object.py  test_others.py  test_set.py  test_strings.py  test_systemvariables.py  test_trigonometry.py  test_type.py
tests/stages/: test_groupacc.py  test_parts.py  test_stages.py
(+1 files in other folders)
