[metadata]
name = easy-mql
version = 1.0.0
author = Vivek Shrikhande
author_email = vivekshrikhande444@gmail.com
description = An easy-to-use query language for MongoDB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vivek-shrikhande/easy-mql
project_urls =
    Bug Tracker = https://github.com/vivek-shrikhande/easy-mql/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
